feat: implement admin dashboard, configure production environment settings, and seed initial administrator account